--- a/index.html
+++ b/index.html
@@ -9,3 +9,6 @@
 
 <h2>Instantáneas, no diferencias</h2>
 <p>La principal diferencia entre Git y cualquier otro VCS (Subversion y compañía incluidos) es cómo Git modela sus datos. Conceptualmente, la mayoría de los demás sistemas almacenan la información como una lista de cambios en los archivos. Estos sistemas (CVS, Subversion, Perforce, Bazaar, etc.) modelan la información que almacenan como un conjunto de archivos y las modificaciones hechas sobre cada uno de ellos a lo largo del tiempo, como ilustra la Figura 1-4.</p>
+<img src="imagenes/git.png"/>
+</body>
+</html>
